syntax = "proto3";

enum State {
  STATE_None = 0;
  STATE_Walking = 1;
  STATE_Falling = 2;
}